--- a/Assignments/lesson-09/2_fullyconnected.ipynb
+++ b/Assignments/lesson-09/2_fullyconnected.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -51,6 +51,21 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#由于现在是pyhton3环境，以上代码可以被下列代码所代替\n",
+    "import numpy as np\n",
+    "#import tensorflow as tf\n",
+    "import tensorflow.compat.v1 as tf\n",
+    "import pickle\n",
+    "#更新的tensorflow2不支持一些api,所以要向上面一样调用\n",
+    "# python3中cPickle模块已经更名为_pickle,但是直接使用pickle似乎更为方便"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
@@ -62,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -138,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -188,7 +203,7 @@
     "num_labels = 10\n",
     "\n",
     "def reformat(dataset, labels):\n",
-    "  dataset = dataset.reshape((-1, image_size * image_size)).astype(np.float32)\n",
+    "  dataset = dataset.reshape(-1, image_size * image_size).astype(np.float32)\n",
     "  # Map 0 to [1.0, 0.0, 0.0 ...], 1 to [0.0, 1.0, 0.0 ...]\n",
     "  labels = (np.arange(num_labels) == labels[:,None]).astype(np.float32)\n",
     "  return dataset, labels\n",
@@ -225,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -243,7 +258,10 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0911 15:48:09.018766 22900 deprecation.py:323] From <ipython-input-21-0f75141aa347>:31: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
+      "W1030 20:38:48.408794 20312 deprecation.py:506] From D:\\Software\\Anoconda_Python3\\lib\\site-packages\\tensorflow_core\\python\\ops\\resource_variable_ops.py:1630: calling BaseResourceVariable.__init__ (from tensorflow.python.ops.resource_variable_ops) with constraint is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "If using Keras pass *_constraint arguments to layers.\n",
+      "W1030 20:38:48.414778 20312 deprecation.py:323] From <ipython-input-4-0f75141aa347>:31: softmax_cross_entropy_with_logits (from tensorflow.python.ops.nn_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "\n",
       "Future major versions of TensorFlow will allow gradients to flow\n",
@@ -312,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -352,34 +370,34 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Loss at step 0: 17.164669\n",
+      "Loss at step 0: 17.546930\n",
       "Training accuracy: 10.0%\n",
-      "Validation accuracy: 12.0%\n",
-      "Loss at step 100: 2.386382\n",
-      "Training accuracy: 71.7%\n",
-      "Validation accuracy: 71.1%\n",
-      "Loss at step 200: 1.893998\n",
-      "Training accuracy: 74.8%\n",
-      "Validation accuracy: 73.6%\n",
-      "Loss at step 300: 1.637334\n",
-      "Training accuracy: 76.2%\n",
-      "Validation accuracy: 74.2%\n",
-      "Loss at step 400: 1.466625\n",
+      "Validation accuracy: 13.8%\n",
+      "Loss at step 100: 2.342965\n",
+      "Training accuracy: 72.4%\n",
+      "Validation accuracy: 70.1%\n",
+      "Loss at step 200: 1.883730\n",
+      "Training accuracy: 75.4%\n",
+      "Validation accuracy: 72.4%\n",
+      "Loss at step 300: 1.627857\n",
+      "Training accuracy: 76.3%\n",
+      "Validation accuracy: 72.9%\n",
+      "Loss at step 400: 1.454141\n",
       "Training accuracy: 77.2%\n",
-      "Validation accuracy: 74.5%\n",
-      "Loss at step 500: 1.340374\n",
+      "Validation accuracy: 73.5%\n",
+      "Loss at step 500: 1.326918\n",
       "Training accuracy: 77.7%\n",
-      "Validation accuracy: 74.9%\n",
-      "Loss at step 600: 1.240903\n",
-      "Training accuracy: 78.3%\n",
-      "Validation accuracy: 74.9%\n",
-      "Loss at step 700: 1.159864\n",
-      "Training accuracy: 78.9%\n",
-      "Validation accuracy: 75.0%\n",
-      "Loss at step 800: 1.092550\n",
-      "Training accuracy: 79.4%\n",
-      "Validation accuracy: 75.1%\n",
-      "Test accuracy: 82.7%\n"
+      "Validation accuracy: 73.8%\n",
+      "Loss at step 600: 1.228428\n",
+      "Training accuracy: 78.2%\n",
+      "Validation accuracy: 74.0%\n",
+      "Loss at step 700: 1.148754\n",
+      "Training accuracy: 78.5%\n",
+      "Validation accuracy: 74.2%\n",
+      "Loss at step 800: 1.082399\n",
+      "Training accuracy: 79.0%\n",
+      "Validation accuracy: 74.3%\n",
+      "Test accuracy: 82.1%\n"
      ]
     }
    ],
@@ -427,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -486,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -526,28 +544,28 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 16.731041\n",
-      "Minibatch accuracy: 9.4%\n",
-      "Validation accuracy: 9.3%\n",
-      "Minibatch loss at step 500: 1.122619\n",
-      "Minibatch accuracy: 80.5%\n",
-      "Validation accuracy: 75.6%\n",
-      "Minibatch loss at step 1000: 1.268741\n",
-      "Minibatch accuracy: 77.3%\n",
+      "Minibatch loss at step 0: 15.742000\n",
+      "Minibatch accuracy: 14.1%\n",
+      "Validation accuracy: 16.6%\n",
+      "Minibatch loss at step 500: 1.120480\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 75.2%\n",
+      "Minibatch loss at step 1000: 1.564080\n",
+      "Minibatch accuracy: 79.7%\n",
       "Validation accuracy: 76.6%\n",
-      "Minibatch loss at step 1500: 0.768908\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 77.2%\n",
-      "Minibatch loss at step 2000: 0.778192\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 77.5%\n",
-      "Minibatch loss at step 2500: 1.089064\n",
+      "Minibatch loss at step 1500: 0.702642\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 76.8%\n",
+      "Minibatch loss at step 2000: 0.760019\n",
+      "Minibatch accuracy: 81.2%\n",
+      "Validation accuracy: 77.3%\n",
+      "Minibatch loss at step 2500: 1.086973\n",
       "Minibatch accuracy: 75.8%\n",
-      "Validation accuracy: 78.5%\n",
-      "Minibatch loss at step 3000: 1.053485\n",
+      "Validation accuracy: 78.6%\n",
+      "Minibatch loss at step 3000: 1.062355\n",
       "Minibatch accuracy: 78.1%\n",
-      "Validation accuracy: 79.4%\n",
-      "Test accuracy: 86.2%\n"
+      "Validation accuracy: 78.4%\n",
+      "Test accuracy: 86.1%\n"
      ]
     }
    ],
@@ -596,51 +614,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "batch_size = 128\n",
-    "num_hidden_nodes = 1024\n",
+    "num_hidden_layer = 1024\n",
     "\n",
     "graph = tf.Graph()\n",
     "with graph.as_default():\n",
-    "\n",
-    "    # Input data. For the training data, we use a placeholder that will be fed\n",
-    "    # at run time with a training minibatch.\n",
-    "    tf_train_dataset = tf.placeholder(tf.float32,shape=(batch_size, image_size * image_size))\n",
-    "    tf_train_labels = tf.placeholder(tf.float32, shape=(batch_size, num_labels))\n",
-    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
-    "    tf_test_dataset = tf.constant(test_dataset)\n",
-    "\n",
-    "    # Variables.\n",
-    "    weights1 = tf.Variable(tf.truncated_normal([image_size * image_size, num_hidden_nodes]))##隐藏层1024个节点\n",
-    "    biases1 = tf.Variable(tf.zeros([num_hidden_nodes]))\n",
     "    \n",
-    "    weights2 = tf.Variable(tf.truncated_normal([num_hidden_nodes, num_labels]))\n",
+    "    #Input data\n",
+    "    tf_train_dataset = tf.placeholder(tf.float32,shape = (batch_size,image_size*image_size))\n",
+    "    tf_train_labels = tf.placeholder(tf.float32,shape = (batch_size,num_labels))\n",
+    "    tf_valid_dataset = tf.constant(valid_dataset)\n",
+    "    tf_valid_labels = tf.constant(valid_labels)\n",
+    "    tf_test_dataset = tf.constant(test_dataset)\n",
+    "    \n",
+    "    #weights and biases\n",
+    "    weights1 = tf.Variable(tf.truncated_normal([image_size*image_size,num_hidden_layer]))\n",
+    "    biases1 = tf.Variable(tf.zeros([num_hidden_layer]))\n",
+    "    weights2 = tf.Variable(tf.truncated_normal([num_hidden_layer,num_labels]))\n",
     "    biases2 = tf.Variable(tf.zeros([num_labels]))\n",
-    "\n",
-    "    # Training computation.##设置神经网络tf.nn.relu()里的参数相当于逻辑回归的函数logits\n",
-    "    lay1_train = tf.nn.relu(tf.matmul(tf_train_dataset, weights1) + biases1)\n",
-    "\n",
-    "    logits = tf.matmul(lay1_train, weights2) + biases2\n",
-    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels=tf_train_labels, logits=logits))\n",
-    "    # Optimizer.\n",
+    "    \n",
+    "    #set nureal nerwork graph\n",
+    "    lay1 = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
+    "    logits = tf.matmul(lay1,weights2)+biases2\n",
+    "    loss = tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(labels = tf_train_labels,logits = logits))\n",
+    "    \n",
+    "    #optimizer\n",
     "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
-    "\n",
-    "    # Predictions for the training, validation, and test data.\n",
+    "    \n",
+    "    #predict\n",
     "    train_prediction = tf.nn.softmax(logits)\n",
     "    \n",
     "    lay1_valid = tf.nn.relu(tf.matmul(tf_valid_dataset, weights1) + biases1) \n",
     "    valid_prediction = tf.nn.softmax(tf.matmul(lay1_valid, weights2) + biases2)\n",
     "    \n",
     "    lay1_test = tf.nn.relu(tf.matmul(tf_test_dataset, weights1) + biases1)\n",
-    "    test_prediction = tf.nn.softmax(tf.matmul(lay1_test, weights2) + biases2)"
+    "    test_prediction = tf.nn.softmax(tf.matmul(lay1_test, weights2) + biases2)                                   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -648,55 +665,92 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 316.356201\n",
-      "Minibatch accuracy: 10.2%\n",
-      "Validation accuracy: 32.2%\n",
-      "Minibatch loss at step 500: 19.002756\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 79.8%\n",
-      "Minibatch loss at step 1000: 7.830658\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 81.0%\n",
-      "Minibatch loss at step 1500: 6.157483\n",
-      "Minibatch accuracy: 90.6%\n",
-      "Validation accuracy: 80.0%\n",
-      "Minibatch loss at step 2000: 2.531204\n",
+      "Minibatch loss at step 0: 432.451233\n",
+      "Minibatch accuracy: 7.0%\n",
+      "Validation accuracy: 30.5%\n",
+      "Minibatch loss at step 500: 26.449369\n",
+      "Minibatch accuracy: 79.7%\n",
+      "Validation accuracy: 78.9%\n",
+      "Minibatch loss at step 1000: 11.832547\n",
+      "Minibatch accuracy: 78.1%\n",
+      "Validation accuracy: 80.4%\n",
+      "Minibatch loss at step 1500: 3.825730\n",
       "Minibatch accuracy: 89.1%\n",
-      "Validation accuracy: 81.4%\n",
-      "Minibatch loss at step 2500: 3.202134\n",
-      "Minibatch accuracy: 85.9%\n",
-      "Validation accuracy: 81.6%\n",
-      "Minibatch loss at step 3000: 2.530877\n",
+      "Validation accuracy: 81.3%\n",
+      "Minibatch loss at step 2000: 3.112865\n",
+      "Minibatch accuracy: 85.2%\n",
+      "Validation accuracy: 81.1%\n",
+      "Minibatch loss at step 2500: 2.690495\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 82.4%\n",
+      "Minibatch loss at step 3000: 2.366106\n",
       "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 82.6%\n",
-      "Test accuracy: 89.7%\n"
+      "Validation accuracy: 82.3%\n",
+      "Test accuracy: 89.2%\n"
      ]
     }
    ],
    "source": [
     "num_steps = 3001\n",
-    "##3001*128 总共的训练数据   ## 之前是801*10000\n",
-    "with tf.Session(graph=graph) as session:\n",
+    "\n",
+    "with tf.Session(graph = graph) as session:\n",
+    "    #变量初始化\n",
     "    tf.global_variables_initializer().run()\n",
-    "    print(\"Initialized\")\n",
+    "    print('Initialized')\n",
+    "    \n",
     "    for step in range(num_steps):\n",
-    "        # Pick an offset within the training data, which has been randomized.\n",
-    "        # Note: we could use better randomization across epochs.\n",
-    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
-    "        # Generate a minibatch.\n",
-    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
+    "        offset = (step*batch_size)%(train_labels.shape[0]-batch_size)\n",
+    "        batch_data = train_dataset[offset:offset+batch_size,:]\n",
     "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
-    "        # Prepare a dictionary telling the session where to feed the minibatch.\n",
-    "        # The key of the dictionary is the placeholder node of the graph to be fed,\n",
-    "        # and the value is the numpy array to feed to it.\n",
-    "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
-    "        _, l, predictions = session.run([optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
     "        \n",
-    "        if (step % 500 == 0):\n",
+    "        feed_dict = {tf_train_dataset:batch_data,tf_train_labels:batch_labels}\n",
+    "        _,l,predictions = session.run([optimizer,loss,train_prediction],feed_dict = feed_dict)\n",
+    "        \n",
+    "        if(step%500 ==0):\n",
     "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(valid_prediction.eval(), valid_labels))\n",
-    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+    "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "780.25"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(100000-128)/128"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "99840"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "780*128"
    ]
   },
   {
