--- a/Assignments/lesson-09/3_regularization.ipynb
+++ b/Assignments/lesson-09/3_regularization.ipynb
@@ -242,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -295,25 +295,25 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 3453.440430\n",
-      "Minibatch accuracy: 14.1%\n",
-      "Validation accuracy: 24.6%\n",
-      "Minibatch loss at step 500: 21.226551\n",
-      "Minibatch accuracy: 91.4%\n",
-      "Validation accuracy: 84.2%\n",
-      "Minibatch loss at step 1000: 0.953851\n",
+      "Minibatch loss at step 0: 3446.912109\n",
+      "Minibatch accuracy: 10.2%\n",
+      "Validation accuracy: 35.0%\n",
+      "Minibatch loss at step 500: 21.186182\n",
+      "Minibatch accuracy: 87.5%\n",
+      "Validation accuracy: 84.1%\n",
+      "Minibatch loss at step 1000: 0.944598\n",
       "Minibatch accuracy: 81.2%\n",
       "Validation accuracy: 83.1%\n",
-      "Minibatch loss at step 1500: 0.587096\n",
+      "Minibatch loss at step 1500: 0.585774\n",
       "Minibatch accuracy: 86.7%\n",
       "Validation accuracy: 83.6%\n",
-      "Minibatch loss at step 2000: 0.605412\n",
-      "Minibatch accuracy: 89.8%\n",
-      "Validation accuracy: 83.4%\n",
-      "Minibatch loss at step 2500: 0.712943\n",
-      "Minibatch accuracy: 84.4%\n",
+      "Minibatch loss at step 2000: 0.612706\n",
+      "Minibatch accuracy: 90.6%\n",
       "Validation accuracy: 83.2%\n",
-      "Minibatch loss at step 3000: 0.762723\n",
+      "Minibatch loss at step 2500: 0.716420\n",
+      "Minibatch accuracy: 83.6%\n",
+      "Validation accuracy: 83.2%\n",
+      "Minibatch loss at step 3000: 0.769706\n",
       "Minibatch accuracy: 82.0%\n",
       "Validation accuracy: 83.4%\n",
       "Test accuracy: 90.3%\n"
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -399,7 +399,8 @@
     "    optimizer = tf.train.GradientDescentOptimizer(0.5).minimize(loss)\n",
     "    \n",
     "    #predict\n",
-    "    train_prediction = tf.nn.softmax(logits)\n",
+    "    lay1_train = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
+    "    train_prediction = tf.nn.softmax(tf.matmul(lay1_train,weights2)+biases2)\n",
     "    \n",
     "    lay1_valid = tf.nn.relu(tf.matmul(tf_valid_dataset, weights1) + biases1) \n",
     "    valid_prediction = tf.nn.softmax(tf.matmul(lay1_valid, weights2) + biases2)\n",
@@ -418,42 +419,33 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 400.123016\n",
-      "Minibatch accuracy: 7.0%\n",
-      "Validation accuracy: 25.4%\n",
-      "Minibatch loss at step 10: 122.685043\n",
-      "Minibatch accuracy: 74.2%\n",
-      "Validation accuracy: 73.4%\n",
-      "Minibatch loss at step 20: 74.297531\n",
-      "Minibatch accuracy: 78.9%\n",
-      "Validation accuracy: 74.0%\n",
-      "Minibatch loss at step 30: 53.068359\n",
-      "Minibatch accuracy: 82.0%\n",
-      "Validation accuracy: 77.1%\n",
-      "Minibatch loss at step 40: 115.690338\n",
-      "Minibatch accuracy: 68.8%\n",
-      "Validation accuracy: 70.0%\n",
-      "Minibatch loss at step 50: 39.003601\n",
-      "Minibatch accuracy: 79.7%\n",
-      "Validation accuracy: 77.3%\n",
-      "Minibatch loss at step 60: 45.368530\n",
-      "Minibatch accuracy: 73.4%\n",
-      "Validation accuracy: 76.0%\n",
-      "Minibatch loss at step 70: 54.570244\n",
-      "Minibatch accuracy: 72.7%\n",
-      "Validation accuracy: 74.3%\n",
-      "Minibatch loss at step 80: 55.599964\n",
-      "Minibatch accuracy: 72.7%\n",
-      "Validation accuracy: 71.7%\n",
-      "Minibatch loss at step 90: 21.991791\n",
-      "Minibatch accuracy: 82.0%\n",
+      "Minibatch loss at step 0: 361.410950\n",
+      "Minibatch accuracy: 8.6%\n",
+      "Validation accuracy: 34.4%\n",
+      "Minibatch loss at step 500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
       "Validation accuracy: 77.5%\n",
-      "Test accuracy: 85.8%\n"
+      "Minibatch loss at step 1000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 1500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 2000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 2500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.5%\n",
+      "Minibatch loss at step 3000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 77.5%\n",
+      "Test accuracy: 84.6%\n"
      ]
     }
    ],
    "source": [
-    "num_steps = 100\n",
+    "num_steps = 3001\n",
     "\n",
     "with tf.Session(graph=graph) as session:\n",
     "    tf.global_variables_initializer().run()\n",
@@ -461,17 +453,17 @@
     "    for step in range(num_steps):\n",
     "    # Pick an offset within the training data, which has been randomized.\n",
     "    # Note: we could use better randomization across epochs.\n",
-    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "        offset = (step * batch_size) % (train_labels[:1000,:].shape[0] - batch_size)\n",
     "    # Generate a minibatch.\n",
-    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
-    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "        batch_data = train_dataset[:1000,:][offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[:1000,:][offset:(offset + batch_size), :]\n",
     "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
     "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
     "    # and the value is the numpy array to feed to it.\n",
     "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
     "        _,l, predictions = session.run(\n",
     "        [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "        if(step % 10 == 0):\n",
+    "        if(step % 500 == 0):\n",
     "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
@@ -483,7 +475,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "只是改了num_steps，去掉了惩罚项，确实出现了一定的过拟合"
+    "只把前1000个数据分成batches,去掉了惩罚项，确实出现了一定的过拟合"
    ]
   },
   {
@@ -505,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -531,7 +523,7 @@
     "    \n",
     "    #set nureal nerwork graph\n",
     "    lay1 = tf.nn.relu(tf.matmul(tf_train_dataset,weights1)+biases1)\n",
-    "    drop = tf.nn.dropout(lay1,0.5)\n",
+    "    drop = tf.nn.dropout(lay1,rate=0.5)\n",
     "    logits = tf.matmul(drop,weights2)+biases2\n",
     "    loss = tf.reduce_mean(\n",
     "        tf.nn.softmax_cross_entropy_with_logits_v2(labels = tf_train_labels,logits = logits))\n",
@@ -551,7 +543,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -559,42 +551,33 @@
      "output_type": "stream",
      "text": [
       "Initialized\n",
-      "Minibatch loss at step 0: 597.078125\n",
-      "Minibatch accuracy: 9.4%\n",
-      "Validation accuracy: 32.2%\n",
-      "Minibatch loss at step 10: 132.847717\n",
-      "Minibatch accuracy: 74.2%\n",
-      "Validation accuracy: 72.1%\n",
-      "Minibatch loss at step 20: 100.311165\n",
-      "Minibatch accuracy: 73.4%\n",
-      "Validation accuracy: 75.7%\n",
-      "Minibatch loss at step 30: 67.605492\n",
-      "Minibatch accuracy: 76.6%\n",
-      "Validation accuracy: 77.3%\n",
-      "Minibatch loss at step 40: 161.917480\n",
-      "Minibatch accuracy: 70.3%\n",
-      "Validation accuracy: 73.1%\n",
-      "Minibatch loss at step 50: 79.408943\n",
-      "Minibatch accuracy: 72.7%\n",
-      "Validation accuracy: 77.9%\n",
-      "Minibatch loss at step 60: 111.958572\n",
-      "Minibatch accuracy: 64.1%\n",
-      "Validation accuracy: 74.3%\n",
-      "Minibatch loss at step 70: 91.117271\n",
-      "Minibatch accuracy: 64.8%\n",
-      "Validation accuracy: 74.5%\n",
-      "Minibatch loss at step 80: 79.934883\n",
-      "Minibatch accuracy: 70.3%\n",
-      "Validation accuracy: 78.7%\n",
-      "Minibatch loss at step 90: 44.646858\n",
-      "Minibatch accuracy: 81.2%\n",
-      "Validation accuracy: 78.8%\n",
-      "Test accuracy: 87.0%\n"
+      "Minibatch loss at step 0: 482.961578\n",
+      "Minibatch accuracy: 8.6%\n",
+      "Validation accuracy: 21.3%\n",
+      "Minibatch loss at step 500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 79.7%\n",
+      "Minibatch loss at step 1000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 80.1%\n",
+      "Minibatch loss at step 1500: 0.061399\n",
+      "Minibatch accuracy: 99.2%\n",
+      "Validation accuracy: 79.8%\n",
+      "Minibatch loss at step 2000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 79.8%\n",
+      "Minibatch loss at step 2500: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 79.9%\n",
+      "Minibatch loss at step 3000: 0.000000\n",
+      "Minibatch accuracy: 100.0%\n",
+      "Validation accuracy: 80.2%\n",
+      "Test accuracy: 87.3%\n"
      ]
     }
    ],
    "source": [
-    "num_steps = 100\n",
+    "num_steps = 3001\n",
     "\n",
     "with tf.Session(graph=graph) as session:\n",
     "    tf.global_variables_initializer().run()\n",
@@ -602,22 +585,29 @@
     "    for step in range(num_steps):\n",
     "    # Pick an offset within the training data, which has been randomized.\n",
     "    # Note: we could use better randomization across epochs.\n",
-    "        offset = (step * batch_size) % (train_labels.shape[0] - batch_size)\n",
+    "        offset = (step * batch_size) % (train_labels[:1000,:].shape[0] - batch_size)\n",
     "    # Generate a minibatch.\n",
-    "        batch_data = train_dataset[offset:(offset + batch_size), :]\n",
-    "        batch_labels = train_labels[offset:(offset + batch_size), :]\n",
+    "        batch_data = train_dataset[:1000,:][offset:(offset + batch_size), :]\n",
+    "        batch_labels = train_labels[:1000,:][offset:(offset + batch_size), :]\n",
     "    # Prepare a dictionary telling the session where to feed the minibatch.\n",
     "    # The key of the dictionary is the placeholder node of the graph to be fed,\n",
     "    # and the value is the numpy array to feed to it.\n",
     "        feed_dict = {tf_train_dataset : batch_data, tf_train_labels : batch_labels}\n",
     "        _,l, predictions = session.run(\n",
     "        [optimizer, loss, train_prediction], feed_dict=feed_dict)\n",
-    "        if(step % 10 == 0):\n",
+    "        if(step % 500 == 0):\n",
     "            print(\"Minibatch loss at step %d: %f\" % (step, l))\n",
     "            print(\"Minibatch accuracy: %.1f%%\" % accuracy(predictions, batch_labels))\n",
     "            print(\"Validation accuracy: %.1f%%\" % accuracy(\n",
     "            valid_prediction.eval(), valid_labels))\n",
     "    print(\"Test accuracy: %.1f%%\" % accuracy(test_prediction.eval(), test_labels))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "确实稍微缓解了过拟合"
    ]
   },
   {
